--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,23 @@
     user-select: none;
 }
 
+.loader div {
+    animation: bounce 1s ease-in-out infinite;
+}
+
+.loader div:nth-child(1) {
+    background-color: #3498db;
+    animation-delay: 0.1s;
+}
+.loader div:nth-child(2) {
+    background-color: #f39c12;
+    animation-delay: 0.2s;
+}
+.loader div:nth-child(3) {
+    background-color: #27ae60;
+    animation-delay: 0.3s;
+}
+
 .scrollbar-thin::-webkit-scrollbar {
     width: 7px;
     border-radius: 5px;
@@ -31,4 +48,16 @@
 .scrollbar-thin::-webkit-scrollbar-thumb {
     background-color: #333333;
     border-radius: 3px;
+}
+
+@keyframes bounce {
+	0% {
+		transform: translateY(0px);
+	}
+	50% {
+		transform: translateY(-15px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
 }
